# trellisdocs

./: CLAUDE.md  README.md  build.sh  deploy-ec2.sh  docker-compose.yaml
api/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  main.py  pyproject.toml  test_db.py  test_documents.py
api-e2e/: 01-health.spec.ts  02-document.spec.ts  package-lock.json  package.json
api/dependencies/: __init__.py
api/di/: __init__.py
api/internal/: db.py
api/model/: __init__.py  document.py  pipeline.py
api/routers/: document_routes.py  health_routes.py  integration_routes.py  pipeline_routes.py  routes.py
api/schemas/: __init__.py  document.py  document_schemas.py  integration_schemas.py  pipeline_schemas.py
api/service/: __init__.py  db_svc.py  documents.py  documents_svc.py  pipelines_svc.py
api/tests/: test_documents_svc.py
api/tests/e2e/: test_db_svc.py  test_documents_api.py
cypress/: README.md
cypress/e2e/: spec.cy.js  trellis.cy.js
infra/terraform/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
infra/terraform/environments/dev/: dev.tfvars
infra/terraform/environments/prod/: prod.tfvars
scripts/: jira-integration.py  mock-data.py  output  pyproject.toml
webapp/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
webapp-e2e/: package-lock.json  package.json
webapp/src/: App.less  App.tsx  app.less  app.tsx  index.css  main.tsx  styles.less
webapp/src/components/: Counter.tsx
webapp/src/store/: atoms.ts  mock-data.ts  models.ts  store.ts
(+67 files in other folders)
