[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]